@@ -20,8 +20,6 @@
 package org.apache.fory.benchmark.java25;
 
 import java.lang.foreign.MemorySegment;
-import java.lang.reflect.Field;
-import java.nio.Buffer;
 import java.nio.ByteBuffer;
 import java.util.concurrent.TimeUnit;
 import org.openjdk.jmh.annotations.Benchmark;
@@ -36,24 +34,15 @@ import org.openjdk.jmh.annotations.Setup;
 import org.openjdk.jmh.annotations.State;
 import org.openjdk.jmh.annotations.Threads;
 import org.openjdk.jmh.annotations.Warmup;
-import sun.misc.Unsafe;
 
 @BenchmarkMode(Mode.AverageTime)
 @OutputTimeUnit(TimeUnit.NANOSECONDS)
 @Warmup(iterations = 5, time = 1)
 @Measurement(iterations = 5, time = 1)
-@Fork(
-    value = 1,
-    jvmArgsAppend = {
-      "--add-opens=java.base/java.nio=ALL-UNNAMED",
-      "--sun-misc-unsafe-memory-access=allow"
-    })
+@Fork(1)
 @Threads(1)
 public class DirectToHeapCopyBenchmark {
   private static final int BUFFER_BYTES = 64 * 1024;
-  private static final Unsafe UNSAFE = loadUnsafe();
-  private static final long BUFFER_ADDRESS_OFFSET = bufferAddressOffset();
-  private static final int BYTE_ARRAY_OFFSET = UNSAFE.arrayBaseOffset(byte[].class);
 
   @State(Scope.Thread)
   public static class CopyState {
@@ -64,7 +53,6 @@ public class DirectToHeapCopyBenchmark {
     MemorySegment directSegment;
     byte[] heapBuffer;
     MemorySegment heapSegment;
-    long directAddress;
 
     @Setup
     public void setup() {
@@ -72,9 +60,8 @@ public class DirectToHeapCopyBenchmark {
       directSegment = MemorySegment.ofBuffer(directBuffer);
       heapBuffer = new byte[BUFFER_BYTES];
       heapSegment = MemorySegment.ofArray(heapBuffer);
-      directAddress = UNSAFE.getLong(directBuffer, BUFFER_ADDRESS_OFFSET);
       for (int i = 0; i < BUFFER_BYTES; i++) {
-        UNSAFE.putByte(null, directAddress + i, (byte) (i * 31));
+        directBuffer.put(i, (byte) (i * 31));
       }
     }
   }
@@ -93,31 +80,5 @@ public class DirectToHeapCopyBenchmark {
     byte[] heap = state.heapBuffer;
     MemorySegment.copy(state.directSegment, 0, state.heapSegment, 0, copySize);
     return heap[copySize - 1];
-  }
-
-  @Benchmark
-  public int unsafeCopyMemory(CopyState state) {
-    int copySize = state.copySize;
-    byte[] heap = state.heapBuffer;
-    UNSAFE.copyMemory(null, state.directAddress, heap, BYTE_ARRAY_OFFSET, copySize);
-    return heap[copySize - 1];
-  }
-
-  private static Unsafe loadUnsafe() {
-    try {
-      Field field = Unsafe.class.getDeclaredField("theUnsafe");
-      field.setAccessible(true);
-      return (Unsafe) field.get(null);
-    } catch (ReflectiveOperationException e) {
-      throw new ExceptionInInitializerError(e);
-    }
-  }
-
-  private static long bufferAddressOffset() {
-    try {
-      return UNSAFE.objectFieldOffset(Buffer.class.getDeclaredField("address"));
-    } catch (NoSuchFieldException e) {
-      throw new ExceptionInInitializerError(e);
-    }
   }
 }
